[package]
name = "dads-excel-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsxwriter = "0.3.5"
chrono = "0.4.19"
regex = "1.5.6"
calamine = { version = "0.18.0", features = ["dates"] }
clap = { version = "3.0", features = ["derive"] }
